--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -553,17 +553,27 @@ input, select, textarea {
 		width: 90%;
 	}
 
+        #header img {
+            width: 200px;
+            height: 200px; 
+            border-radius: 50%;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);    
+        }
+
 		#header h1 {
 			font-size: 4.35em;
 			font-weight: 900;
 			letter-spacing: -0.035em;
 			line-height: 1em;
+            text-shadow: 0 0 3px #000000;
+            
 		}
 
 		#header p {
 			font-size: 1.25em;
 			margin: 0.75em 0 0.25em 0;
-			opacity: 0.75;
+			opacity: 1;
+            text-shadow: 0 0 3px #000000;
 		}
 
 		#header nav {
@@ -684,6 +694,7 @@ input, select, textarea {
 					text-align: center;
 					top: 0;
 					width: 2.5em;
+                    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 				}
 
 				#header nav a:hover {
